--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -22,7 +22,7 @@ buildscript {
         powermock_version = '1.7.0RC4'
         pubnub_version = '4.6.5'
         retrofit_version = '2.3.0'
-        sqlbrite_version = '1.1.2'
+        sqlbrite_version = '2.0.0'
         sqldelight_version = '0.6.1'
         uiautomator_version = "2.1.2"
     }
@@ -159,13 +159,15 @@ dependencies {
     compile "com.squareup.okhttp3:okhttp:$okhttp3_version"
     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
-    compile "com.squareup.sqlbrite:sqlbrite:$sqlbrite_version"
+    compile "com.squareup.sqlbrite2:sqlbrite:$sqlbrite_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     kapt "com.google.auto.value:auto-value:$autovalue_version"
     kapt("com.google.dagger:dagger-compiler:$dagger_version")
     kapt "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
     provided "com.google.auto.value:auto-value:$autovalue_version"
     provided "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
+    annotationProcessor "com.google.auto.value:auto-value:$autovalue_version"
+    annotationProcessor "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
     androidTestCompile "com.android.support:support-annotations:$android_support_version"
     androidTestCompile("com.android.support.test.espresso:espresso-contrib:$espresso_version") {
         exclude group: 'com.android.support', module: 'appcompat'
