--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -12,10 +12,10 @@ buildscript {
         glide_version = '3.8.0'
         glide_okhttp3_integration_version = '1.5.0@aar'
         gson_version = '2.8.1'
-        gms_version = '11.2.2'
+        gms_version = '11.4.0'
         google_phonenumber_version = '8.5.2'
         junit_version = '4.12'
-        kotlin_version = '1.1.4-3'
+        kotlin_version = '1.1.50'
         mockito_version = '2.8.9'
         multidex_version = '1.0.1'
         okhttp3_version = '3.8.1'
@@ -65,12 +65,12 @@ android {
             buildConfigField "String", "PLAYER_NO_IMAGE_URL", "\"https://kartwheel-app.s3.amazonaws.com/shared/empty-profile.jpg\""
             buildConfigField "String", "PUBNUB_PUBLISH_KEY", "\"pub-c-d910acf2-8540-453a-96d4-b68288c4c98f\""
             buildConfigField "String", "PUBNUB_SUBSCRIPTION_KEY", "\"sub-c-10a277a8-0f99-11e7-bd0e-0619f8945a4f\""
-            buildConfigField "String", "SERVER", "\"http://10.0.2.2:3000\""
+            buildConfigField "String", "SERVER", "\"http://192.168.3.1:3000\""
             buildConfigField "String", "SERVER_FRAGMENT", "\"\""
             debuggable true
             minifyEnabled false
             multiDexEnabled true
-            resValue "string", "google_maps_key", "AIzaSyDMR6PxrRUtWt2QJ5AeZ1G-ayl5AwXsltU"
+            resValue "string", "google_maps_key", "AIzaSyBwQypLziEhFbISihza2BfCCcd_y9brGps"
         }
         staging {
             buildConfigField "String", "AWS_BUCKET_NAME", "\"kartwheel-staging\""
@@ -85,7 +85,7 @@ android {
             debuggable true
             minifyEnabled false
             multiDexEnabled true
-            resValue "string", "google_maps_key", "AIzaSyDMR6PxrRUtWt2QJ5AeZ1G-ayl5AwXsltU"
+            resValue "string", "google_maps_key", "AIzaSyBwQypLziEhFbISihza2BfCCcd_y9brGps"
             signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -103,7 +103,7 @@ android {
             minifyEnabled true
             multiDexEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            resValue "string", "google_maps_key", "AIzaSyDMR6PxrRUtWt2QJ5AeZ1G-ayl5AwXsltU"
+            resValue "string", "google_maps_key", "AIzaSyBwQypLziEhFbISihza2BfCCcd_y9brGps"
         }
     }
     compileSdkVersion 26
@@ -151,6 +151,7 @@ dependencies {
     compile "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
     compile "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
     compile "com.google.android.gms:play-services-maps:$gms_version"
+    compile "com.google.android.gms:play-services-location:$gms_version"
     compile "com.google.code.gson:gson:$gson_version"
     compile "com.google.dagger:dagger:$dagger_version"
     compile "com.google.firebase:firebase-messaging:$gms_version"
