--- a/kartwheel/app/src/main/AndroidManifest.xml
+++ b/kartwheel/app/src/main/AndroidManifest.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="us.handstand.kartwheel">
+          package="us.handstand.kartwheel">
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="true" />
+        android:required="true"/>
     <uses-feature
         android:name="android.hardware.location.gps"
-        android:required="true" />
+        android:required="true"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality. 
     -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" android:requiredFeature="true"/>
 
     <application
         android:name=".KartWheel"
@@ -28,7 +28,7 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="7205cd5b0cf9a4b0c7a6f0d185d18d9f7478da23" />
+            android:value="7205cd5b0cf9a4b0c7a6f0d185d18d9f7478da23"/>
         <!-- Photo provider -->
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -37,22 +37,22 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths" />
+                android:resource="@xml/file_paths"/>
         </provider>
 
         <activity android:name=".activity.LaunchActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".activity.TicketActivity"
-            android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".activity.LoggedInActivity" />
-        <activity android:name=".activity.RaceSignUpActivity" />
-        <activity android:name=".activity.OnboardingActivity" />
+            android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".activity.LoggedInActivity"/>
+        <activity android:name=".activity.RaceSignUpActivity"/>
+        <activity android:name=".activity.OnboardingActivity"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -63,10 +63,10 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="@string/google_maps_key"/>
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
-            android:enabled="true" />
+            android:enabled="true"/>
 
     </application>
 
