--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -10,15 +10,15 @@ buildscript {
         dagger_version = '2.11'
         espresso_version = '2.2.2'
         exoplayer_version = 'r2.4.2'
-        glide_version = '3.8.0'
-        glide_okhttp3_integration_version = '1.5.0@aar'
+        glide_version = '4.1.1'
+        glide_okhttp3_integration_version = '4.1.1@aar'
         gson_version = '2.8.1'
         gms_version = '11.4.0'
         google_phonenumber_version = '8.5.2'
         junit_version = '4.12'
         kotlin_version = '1.1.51'
         mockito_version = '2.8.9'
-        multidex_version = '1.0.1'
+        multidex_version = '1.0.2'
         okhttp3_version = '3.8.1'
         powermock_version = '1.7.0RC4'
         pubnub_version = '4.6.5'
@@ -66,7 +66,7 @@ android {
             buildConfigField "String", "PUBNUB_PUBLISH_KEY", "\"pub-c-d910acf2-8540-453a-96d4-b68288c4c98f\""
             buildConfigField "String", "PUBNUB_SUBSCRIPTION_KEY", "\"sub-c-10a277a8-0f99-11e7-bd0e-0619f8945a4f\""
             // 10.0.2.2 is the address that the android emulator uses to access the host machine
-            buildConfigField "String", "SERVER", "\"http://10.0.2.2:3000\""
+            buildConfigField "String", "SERVER", "\"http://192.168.3.1:3000\""
             buildConfigField "String", "SERVER_FRAGMENT", "\"\""
             debuggable true
             minifyEnabled false
@@ -110,6 +110,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "us.handstand.kartwheel"
+        javaCompileOptions.annotationProcessorOptions.includeCompileClasspath = true
         minSdkVersion 19
         targetSdkVersion 26
         testInstrumentationRunner "us.handstand.kartwheel.test.KartWheelTestRunner"
@@ -164,6 +165,7 @@ dependencies {
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
     compile "com.squareup.sqlbrite2:sqlbrite:$sqlbrite_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    kapt "com.github.bumptech.glide:compiler:4.1.1"
     kapt "com.google.auto.value:auto-value:$autovalue_version"
     kapt("com.google.dagger:dagger-compiler:$dagger_version")
     kapt "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
