--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -11,7 +11,6 @@ buildscript {
         espresso_version = '2.2.2'
         exoplayer_version = 'r2.4.2'
         glide_version = '4.1.1'
-        glide_okhttp3_integration_version = '4.1.1@aar'
         gson_version = '2.8.1'
         gms_version = '11.4.0'
         google_phonenumber_version = '8.5.2'
@@ -149,7 +148,7 @@ dependencies {
         transitive = true
     }
     compile "com.github.bumptech.glide:glide:$glide_version"
-    compile "com.github.bumptech.glide:okhttp3-integration:$glide_okhttp3_integration_version"
+    compile "com.github.bumptech.glide:okhttp3-integration:$glide_version@aar"
     compile "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
     compile "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
     compile "com.google.android.gms:play-services-maps:$gms_version"
@@ -165,7 +164,7 @@ dependencies {
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
     compile "com.squareup.sqlbrite2:sqlbrite:$sqlbrite_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    kapt "com.github.bumptech.glide:compiler:4.1.1"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
     kapt "com.google.auto.value:auto-value:$autovalue_version"
     kapt("com.google.dagger:dagger-compiler:$dagger_version")
     kapt "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
