--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         exoplayer_version = 'r2.4.2'
         glide_version = '4.1.1'
         gson_version = '2.8.2'
-        gms_version = '11.4.0'
+        gms_version = '11.4.2'
         google_phonenumber_version = '8.5.2'
         junit_version = '4.12'
         kotlin_version = '1.1.51'
@@ -164,6 +164,7 @@ dependencies {
     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
     compile "com.squareup.retrofit2:retrofit:$retrofit_version"
     compile "com.squareup.sqlbrite2:sqlbrite:$sqlbrite_version"
+    compile "com.squareup.sqlbrite2:sqlbrite-kotlin:$sqlbrite_version"
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
     kapt "com.google.auto.value:auto-value:$autovalue_version"
