--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -143,6 +143,7 @@ configurations.all {
 dependencies {
     compile "com.amazonaws:aws-android-sdk-s3:$aws_version"
     compile "com.android.support:appcompat-v7:$android_support_version"
+    compile "com.android.support:cardview-v7:$android_support_version"
     compile "com.android.support:design:$android_support_version"
     compile "com.android.support:multidex:$multidex_version"
     api("com.crashlytics.sdk.android:crashlytics:$crashlytics_version@aar") {
