--- a/kartwheel/app/build.gradle
+++ b/kartwheel/app/build.gradle
@@ -1,34 +1,37 @@
 buildscript {
     ext {
-        android_support_version = '26.1.0'
-        android_test_runner_version = '0.5'
-        aws_version = '2.4.4'
+        android_support_version = '27.1.1'
+        android_test_runner_version = '1.0.2'
+        aws_version = '2.6.20'
         autovalue_version = '1.5'
-        autovalue_gson_version = '0.5.0'
-        crashlytics_version = '2.6.8'
-        constraint_layout_version = '1.0.2'
+        autovalue_gson_version = '0.7.0'
+        crashlytics_version = '2.9.3'
+        constraint_layout_version = '1.1.0'
         dagger_version = '2.11'
-        espresso_version = '2.2.2'
+        espresso_version = '3.0.2'
         exoplayer_version = 'r2.4.2'
-        glide_version = '4.1.1'
-        gson_version = '2.8.2'
-        gms_version = '11.4.2'
+        firebase_core_version = '16.0.0'
+        firebase_messaging_version = '17.0.0'
+        glide_version = '4.7.1'
+        gson_version = '2.8.4'
+        gms_version = '15.0.1'
         google_phonenumber_version = '8.5.2'
         junit_version = '4.12'
-        kotlin_version = '1.1.51'
+        kotlin_version = '1.2.41'
         mockito_version = '2.8.9'
-        multidex_version = '1.0.2'
-        okhttp3_version = '3.8.1'
+        multidex_version = '1.0.3'
+        okhttp3_version = '3.10.0'
         powermock_version = '1.7.0RC4'
-        pubnub_version = '4.6.5'
-        retrofit_version = '2.3.0'
+        pubnub_version = '4.19.0'
+        retrofit_version = '2.4.0'
         sqlbrite_version = '2.0.0'
         sqldelight_version = '0.6.1'
-        uiautomator_version = "2.1.2"
+        uiautomator_version = "2.1.3"
     }
 
     repositories {
         jcenter()
+        google()
         maven {
             url "https://plugins.gradle.org/m2/"
         }
@@ -54,7 +57,7 @@ repositories {
 }
 
 android {
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
     buildTypes {
         debug {
             buildConfigField "String", "AWS_BUCKET_NAME", "\"kartwheel-staging\""
@@ -106,12 +109,12 @@ android {
             resValue "string", "google_maps_key", "AIzaSyBwQypLziEhFbISihza2BfCCcd_y9brGps"
         }
     }
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "us.handstand.kartwheel"
         javaCompileOptions.annotationProcessorOptions.includeCompileClasspath = true
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 27
         testInstrumentationRunner "us.handstand.kartwheel.test.KartWheelTestRunner"
         testFunctionalTest true
         versionCode 1
@@ -140,56 +143,57 @@ configurations.all {
 }
 
 dependencies {
-    compile "com.amazonaws:aws-android-sdk-s3:$aws_version"
-    compile "com.android.support:appcompat-v7:$android_support_version"
-    compile "com.android.support:design:$android_support_version"
-    compile "com.android.support:multidex:$multidex_version"
+    implementation "com.amazonaws:aws-android-sdk-s3:$aws_version"
+    implementation "com.android.support:appcompat-v7:$android_support_version"
+    implementation "com.android.support:design:$android_support_version"
+    implementation "com.android.support:multidex:$multidex_version"
     api("com.crashlytics.sdk.android:crashlytics:$crashlytics_version@aar") {
         transitive = true
     }
-    compile "com.github.bumptech.glide:glide:$glide_version"
-    compile "com.github.bumptech.glide:okhttp3-integration:$glide_version@aar"
-    compile "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
-    compile "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
-    compile "com.google.android.gms:play-services-maps:$gms_version"
-    compile "com.google.android.gms:play-services-location:$gms_version"
-    compile "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation "com.github.bumptech.glide:okhttp3-integration:$glide_version@aar"
+    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
+    implementation "com.google.android.gms:play-services-maps:$gms_version"
+    implementation "com.google.android.gms:play-services-location:$gms_version"
+    implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
     compileOnly "com.google.auto.value:auto-value:$autovalue_version"
-    compile "com.google.code.gson:gson:$gson_version"
-    compile "com.google.dagger:dagger:$dagger_version"
-    compile "com.google.firebase:firebase-messaging:$gms_version"
-    compile "com.googlecode.libphonenumber:libphonenumber:$google_phonenumber_version"
-    compile "com.pubnub:pubnub-gson:$pubnub_version"
-    compile "com.squareup.okhttp3:okhttp:$okhttp3_version"
-    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
-    compile "com.squareup.sqlbrite2:sqlbrite:$sqlbrite_version"
-    compile "com.squareup.sqlbrite2:sqlbrite-kotlin:$sqlbrite_version"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.firebase:firebase-core:$firebase_core_version"
+    implementation "com.google.firebase:firebase-messaging:$firebase_messaging_version"
+    implementation "com.googlecode.libphonenumber:libphonenumber:$google_phonenumber_version"
+    implementation "com.pubnub:pubnub-gson:$pubnub_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.sqlbrite2:sqlbrite:$sqlbrite_version"
+    implementation "com.squareup.sqlbrite2:sqlbrite-kotlin:$sqlbrite_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
     kapt "com.google.auto.value:auto-value:$autovalue_version"
     kapt("com.google.dagger:dagger-compiler:$dagger_version")
     kapt "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
-    provided "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
-    androidTestCompile "com.android.support:support-annotations:$android_support_version"
-    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$espresso_version") {
+    compileOnly "com.ryanharter.auto.value:auto-value-gson:$autovalue_gson_version"
+    androidTestImplementation "com.android.support:support-annotations:$android_support_version"
+    androidTestImplementation("com.android.support.test.espresso:espresso-contrib:$espresso_version") {
         exclude group: 'com.android.support', module: 'appcompat'
         exclude group: 'com.android.support', module: 'support-v4'
         exclude group: 'com.android.support', module: 'recyclerview-v7'
         exclude group: 'com.android.support', module: 'design'
     }
-    androidTestCompile "com.android.support.test.espresso:espresso-core:$espresso_version"
-    androidTestCompile "com.android.support.test.espresso:espresso-intents:$espresso_version"
-    androidTestCompile "com.android.support.test:runner:$android_test_runner_version"
-    androidTestCompile "com.android.support.test.uiautomator:uiautomator-v18:$uiautomator_version"
-    androidTestCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    androidTestCompile "com.squareup.okhttp3:mockwebserver:$okhttp3_version"
-    testCompile "com.squareup.okhttp3:mockwebserver:$okhttp3_version"
-    testCompile "org.mockito:mockito-core:$mockito_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testCompile "org.powermock:powermock-api-mockito2:$powermock_version"
-    testCompile "org.powermock:powermock-module-junit4:$powermock_version"
-    testCompile "junit:junit:$junit_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espresso_version"
+    androidTestImplementation "com.android.support.test:runner:$android_test_runner_version"
+    androidTestImplementation "com.android.support.test.uiautomator:uiautomator-v18:$uiautomator_version"
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okhttp3_version"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp3_version"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testImplementation "org.powermock:powermock-api-mockito2:$powermock_version"
+    testImplementation "org.powermock:powermock-module-junit4:$powermock_version"
+    testImplementation "junit:junit:$junit_version"
 }
 
 kapt { generateStubs = true }
